--- a/modules/gateway/assertions/CsrfProtectionAssertion/src/main/java/com/l7tech/external/assertions/csrfprotection/console/resources/CsrfProtectionAssertionPropertiesDialog.form
+++ b/modules/gateway/assertions/CsrfProtectionAssertion/src/main/java/com/l7tech/external/assertions/csrfprotection/console/resources/CsrfProtectionAssertionPropertiesDialog.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="402"/>
+      <xy x="20" y="20" width="500" height="403"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -52,7 +52,7 @@
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Cookie Name"/>
+                  <text resource-bundle="com/l7tech/external/assertions/csrfprotection/console/resources/CsrfProtectionAssertionPropertiesDialog" key="cookieName"/>
                 </properties>
               </component>
               <component id="ba6ec" class="javax.swing.JLabel" binding="parameterNameLabel">
@@ -60,7 +60,7 @@
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="HTTP Parameter Name"/>
+                  <text resource-bundle="com/l7tech/external/assertions/csrfprotection/console/resources/CsrfProtectionAssertionPropertiesDialog" key="httpParameterName"/>
                 </properties>
               </component>
               <component id="470db" class="javax.swing.JTextField" binding="cookieNameField">
@@ -100,7 +100,7 @@
                   <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Allowed HTTP Methods"/>
+                  <text resource-bundle="com/l7tech/external/assertions/csrfprotection/console/resources/CsrfProtectionAssertionPropertiesDialog" key="allowedHttpMethods"/>
                 </properties>
               </component>
             </children>
@@ -151,7 +151,7 @@
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Options"/>
+                  <text resource-bundle="com/l7tech/external/assertions/csrfprotection/console/resources/CsrfProtectionAssertionPropertiesDialog" key="options"/>
                 </properties>
               </component>
               <grid id="7b7ed" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -167,7 +167,7 @@
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
-                      <text value="Allow Empty Values"/>
+                      <text resource-bundle="com/l7tech/external/assertions/csrfprotection/console/resources/CsrfProtectionAssertionPropertiesDialog" key="skipValidationIfEmptyOrMissing"/>
                     </properties>
                   </component>
                   <hspacer id="33ac0">
@@ -182,7 +182,7 @@
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Valid Domains"/>
+                  <text resource-bundle="com/l7tech/external/assertions/csrfprotection/console/resources/CsrfProtectionAssertionPropertiesDialog" key="validDomains"/>
                 </properties>
               </component>
               <grid id="e0ef8" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -248,7 +248,7 @@
                               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                             </constraints>
                             <properties>
-                              <text value="Add"/>
+                              <text resource-bundle="com/l7tech/external/assertions/csrfprotection/console/resources/CsrfProtectionAssertionPropertiesDialog" key="add"/>
                             </properties>
                           </component>
                           <vspacer id="2acf0">
@@ -261,7 +261,7 @@
                               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                             </constraints>
                             <properties>
-                              <text value="Edit"/>
+                              <text resource-bundle="com/l7tech/external/assertions/csrfprotection/console/resources/CsrfProtectionAssertionPropertiesDialog" key="edit"/>
                             </properties>
                           </component>
                           <component id="2c0f2" class="javax.swing.JButton" binding="removeDomainButton">
@@ -269,7 +269,7 @@
                               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                             </constraints>
                             <properties>
-                              <text value="Remove"/>
+                              <text resource-bundle="com/l7tech/external/assertions/csrfprotection/console/resources/CsrfProtectionAssertionPropertiesDialog" key="remove"/>
                             </properties>
                           </component>
                         </children>
