--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/XslTransformationPropertiesDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/XslTransformationPropertiesDialog.form
@@ -3,7 +3,7 @@
   <grid id="68161" binding="mainPanel" layout-manager="GridLayoutManager" row-count="6" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="12" left="12" bottom="12" right="12"/>
     <constraints>
-      <xy x="50" y="23" width="1095" height="768"/>
+      <xy x="50" y="23" width="702" height="641"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -112,7 +112,9 @@
           <xy id="771d3" binding="innerPanel" layout-manager="XYLayout" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                <preferred-size width="540" height="-1"/>
+              </grid>
             </constraints>
             <properties/>
             <border type="none"/>
