--- a/modules/gateway/assertions/Api3ScaleAssertion/src/main/java/com/l7tech/external/assertions/api3scale/console/Api3ScaleReportPropertiesDialog.form
+++ b/modules/gateway/assertions/Api3ScaleAssertion/src/main/java/com/l7tech/external/assertions/api3scale/console/Api3ScaleReportPropertiesDialog.form
@@ -1,30 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.l7tech.external.assertions.api3scale.console.Api3ScaleReportPropertiesDialog">
-  <grid id="cbd77" binding="propertyPanel" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="cbd77" binding="propertyPanel" layout-manager="GridLayoutManager" row-count="4" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="8" bottom="0" right="8"/>
     <constraints>
-      <xy x="48" y="54" width="600" height="297"/>
+      <xy x="48" y="54" width="802" height="297"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
       <component id="c9432" class="javax.swing.JLabel">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text resource-bundle="com/l7tech/external/assertions/api3scale/console/Api3ScaleReportPropertiesDialog" key="transaction"/>
+          <text resource-bundle="com/l7tech/external/assertions/api3scale/console/Api3ScaleReportPropertiesDialog" key="usage"/>
         </properties>
       </component>
-      <vspacer id="7ff73">
-        <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </vspacer>
       <grid id="541c" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
@@ -62,17 +57,67 @@
       </grid>
       <scrollpane id="2f99a">
         <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
         <children>
-          <component id="155c6" class="javax.swing.JTable" binding="transactionTable">
+          <component id="155c6" class="javax.swing.JTable" binding="usageTable">
             <constraints/>
-            <properties/>
+            <properties>
+              <preferredScrollableViewportSize width="350" height="100"/>
+            </properties>
           </component>
         </children>
       </scrollpane>
+      <component id="b28b3" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text resource-bundle="com/l7tech/external/assertions/api3scale/console/Api3ScaleReportPropertiesDialog" key="privateKey"/>
+        </properties>
+      </component>
+      <component id="5294f" class="javax.swing.JTextField" binding="privateKeyTextField">
+        <constraints>
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties/>
+      </component>
+      <component id="f1e12" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text resource-bundle="com/l7tech/external/assertions/api3scale/console/Api3ScaleReportPropertiesDialog" key="applicationId"/>
+        </properties>
+      </component>
+      <component id="9796e" class="javax.swing.JTextField" binding="appIdTextField">
+        <constraints>
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties/>
+      </component>
+      <component id="87f33" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text resource-bundle="com/l7tech/external/assertions/api3scale/console/Api3ScaleReportPropertiesDialog" key="server"/>
+        </properties>
+      </component>
+      <component id="f0738" class="javax.swing.JTextField" binding="serverTextField">
+        <constraints>
+          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties/>
+      </component>
     </children>
   </grid>
 </form>
